--- a/cssCourse/myWebSite/css/style.css
+++ b/cssCourse/myWebSite/css/style.css
@@ -80,7 +80,7 @@
         margin-top: 40px;
     }
     
-    @media(max-widtth: 600px) {
+    @media(max-width: 600px) {
         #main {
             width: 100%;
             float: none;
