--- a/flipcard/css/style.css
+++ b/flipcard/css/style.css
@@ -1,14 +1,14 @@
 .container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .card-container {
-    width: 200px;
-    height: 300px;
+    width: 400px;
+    height: 700px;
 }
 
 .card {
@@ -35,19 +35,18 @@
 }
 
 .card .front {
-    background-color: tomato;
-    color: black;
+    background-image: url(../img/chaja.jpeg);
     text-align: center;
 }
 
 .card .back {
-    background-color: black;
-    color: tomato;
+    background-image: url(../img/choco.jpeg);
     transform: rotateY(180deg);
     text-align: center;
 }
 
 .back button {
-    background-color: tomato;
+    background-color: transparent;
+    background-position: center;
     padding: 10px 20px;
 }
