--- a/flexbox2/css/style.css
+++ b/flexbox2/css/style.css
@@ -1,6 +1,7 @@
 .container-1 {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     /* align-items: flex-start; */
     /* align-items: flex-end; */
     /* align-items: center */
@@ -10,38 +11,56 @@
 
 .container-2 {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: space-between;
+    /* align-items: center; */
     /* justify-content: center; */
     /* justify-content: space-around; */
 }
 
+.container-3 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .container-1 div,
-.container-2 div {
+.container-2 div,
+.container-3 div {
     border: 3px solid #ccc;
     padding: 10px;
     flex-wrap: wrap;
 }
 
 .box-1 {
-    flex: 2;
-    order: 2;
+    flex-basis: 15%;
+    /* flex: auto */
+    /* flex: 2; */
+    /* order: 2; */
 }
 
 .box-2 {
-    flex: 1;
-    order: 1;
+    flex-basis: 15%;
+    /* flex: auto; */
+    /* flex: 1; */
+    /* order: 1; */
 }
 
 .box-3 {
-    flex: 1;
-    order: 3;
+    flex-basis: 15%;
+    /* flex: auto; */
+    /* flex: 1; */
+    /* order: 3; */
 }
 
 .container-2-box {
+    flex-basis: 15%;
+    flex-wrap: wrap;
+    /* flex: auto; */
     /* width: 30%; */
     /* same as above */
-    flex-basis: 30%;
-    flex-wrap: wrap;
+}
+
+.container-3-box {
+    flex-basis: 12%;
 }
